tests/type_tests/negatives/curry_arguments.py
from pfun import curry


@curry
def f(a: int, b: int) -> str:
    pass


f(1)('')